src/test/deca/context/invalid/InvalidCastType.deca
// Description:
//    cast Invalid
//
// Resultats:
//    erreur Contextuelle
//
// Historique:
//    cree le 08/01/2023

class A {
}

class B {
}

{
	A a = new A();
	B b = (B) (a);

}
